--- a/gui/colorselect.kv
+++ b/gui/colorselect.kv
@@ -65,6 +65,7 @@
                     font_style: "Button"
                     md_bg_color: C(app.globals.colordefs["Red"])
                     text: "Red"
+                    rounded_button: False
                     on_release:
                         root.ColorSelect(but1)
 
@@ -74,6 +75,7 @@
                     id: but2
                     font_style: "Button"
                     text: "Pink"
+                    rounded_button: False
                     on_release:
                         root.ColorSelect(but2)
 
@@ -83,6 +85,7 @@
                     id: but3
                     font_style: "Button"
                     text: "Purple"
+                    rounded_button: False
                     on_release:
                         root.ColorSelect(but3)
 
@@ -92,6 +95,7 @@
                     id: but4
                     font_style: "Button"
                     text: "Blue"
+                    rounded_button: False
                     on_release:
                         root.ColorSelect(but4)
 
@@ -101,6 +105,7 @@
                     id: but5
                     font_style: "Button"
                     text: "Green"
+                    rounded_button: False
                     on_release:
                         root.ColorSelect(but5)
 
@@ -110,6 +115,7 @@
                     id: but6
                     font_style: "Button"
                     text: "Yellow"
+                    rounded_button: False
                     on_release:
                         root.ColorSelect(but6)
 
@@ -119,6 +125,7 @@
                     id: but7
                     font_style: "Button"
                     text: "Orange"
+                    rounded_button: False
                     on_release:
                         root.ColorSelect(but7)
 
@@ -128,6 +135,7 @@
                     id: but8
                     font_style: "Button"
                     text: "Brown"
+                    rounded_button: False
                     on_release:
                         root.ColorSelect(but8)
 
@@ -137,6 +145,7 @@
                     id: but9
                     font_style: "Button"
                     text: "Grey"
+                    rounded_button: False
                     on_release:
                         root.ColorSelect(but9)
 
