--- a/gui/mainscreens/Action.kv
+++ b/gui/mainscreens/Action.kv
@@ -82,7 +82,7 @@
         MDFillRoundFlatIconButton:
             id: useaction
             adaptive_height: True
-            icon: "code-not-equal-variant"
+            icon: "language-python"
             text: "Begin Action"
             pos_hint: {"center_x": 0.5}
             md_bg_color: app.theme_cls.primary_color
