--- a/gui/playeramount.kv
+++ b/gui/playeramount.kv
@@ -53,6 +53,7 @@
                     font_style: 'Button'
                     md_bg_color: app.theme_cls.primary_color
                     text: "4 players"
+                    rounded_button: False
                     on_press:
                         root.selectcheck(butt1)
 
@@ -63,6 +64,7 @@
                     font_style: 'Button'
                     md_bg_color: app.theme_cls.primary_color
                     text: "5 players"
+                    rounded_button: False
                     on_press:
                         root.selectcheck(butt2)
 
@@ -73,6 +75,7 @@
                     font_style: 'Button'
                     md_bg_color: app.theme_cls.primary_color
                     text: "6 players"
+                    rounded_button: False
                     on_press:
                         root.selectcheck(butt3)
 
@@ -83,6 +86,7 @@
                     font_style: 'Button'
                     md_bg_color: app.theme_cls.primary_color
                     text: "7 Players"
+                    rounded_button: False
                     on_press:
                         root.selectcheck(butt4)
 
@@ -93,6 +97,7 @@
                     font_style: "Button"
                     md_bg_color: app.theme_cls.primary_color
                     text: "8 Players"
+                    rounded_button: False
                     on_press:
                         root.selectcheck(butt5)
 
@@ -103,6 +108,7 @@
                     font_style: "Button"
                     md_bg_color: app.theme_cls.primary_color
                     text: "9 Players"
+                    rounded_button: False
                     on_press:
                         root.selectcheck(butt6)
 
