--- a/dialogs/logdialog.kv
+++ b/dialogs/logdialog.kv
@@ -1,9 +1,10 @@
 <LogDialog>:
-    size_hint: 0.5, 0.25
+    size_hint: 0.7, 0.4
     auto_dismiss: False
 
     MDCard:
-        spacing: "8dp"
+        id: logcard
+        spacing: "12dp"
         orientation: "vertical"
         padding: "8dp"
         md_bg_color: app.theme_cls.primary_color
@@ -11,7 +12,7 @@
         radius: ["15dp"]
 
         MDLabel:
-            id: playerlogtitle
+            text: "Player Log"
             font_style: "H4"
             size_hint_y: None
             height: self.texture_size[1]
@@ -22,51 +23,82 @@
         MDSeparator:
             color: C("FFFFFF")
 
-        MDBoxLayout:
-            spacing: "8dp"
-            orientation: "vertical"
+        MDStackLayout:
+            padding: "8dp"
+            spacing: "12dp"
+            canvas.before:
+                Color:
+                    rgba: 0/255, 0/255, 0/255, 0.8
+                Line:
+                    width: 0.3
+                    rectangle: self.x, self.y, self.width, self.height
+                Color:
+                    rgba: 0/255, 0/255, 0/255, 0.5
+                Rectangle:
+                    pos: self.pos
+                    size: self.size
+
+            MDLabel:
+                id: whatplayer
+                text: "[u]Player[/u]: "
+                text_color: C("FFFFFF")
+                font_style: "Subtitle1"
+                theme_text_color: "Custom"
+                adaptive_height: True
+                markup: True
 
             MDLabel:
                 markup: True
-                font_style: "Subtitle2"
+                font_style: "Subtitle1"
                 adaptive_height: True
                 theme_text_color: "Custom"
                 text_color: C("FFFFFF")
                 text: "[u]Confidential[/u]: Player logs may not be revealed until the end of the phase."
 
-            Widget:
-                size_hint: 1, 0.01
+        MDLabel:
+            text: "Result"
+            font_style: "H4"
+            size_hint_y: None
+            height: self.texture_size[1]
+            halign: "center"
+            theme_text_color: "Custom"
+            text_color: C("FFFFFF")
 
-            MDBoxLayout:
-                orientation: "vertical"
-                canvas.before:
-                    Color:
-                        rgba: 0/255, 0/255, 0/255, 0.8
-                    Line:
-                        width: 0.3
-                        rectangle: self.x, self.y, self.width, self.height
-                    Color:
-                        rgba: 0/255, 0/255, 0/255, 0.5
-                    Rectangle:
-                        pos: self.pos
-                        size: self.size
+        MDSeparator:
+            color: C("FFFFFF")
 
-                MDLabel:
-                    id: log1sub
-                    markup: True
-                    text_color: app.theme_cls.primary_color
-                    theme_text_color: "Custom"
-                    font_style: 'Subtitle2'
-                    halign: "center"
-                    text: f"[size=30sp][font=Icons]{md_icons['folder']}[/font] [font=Icons]{md_icons['folder']}[/font][/size]"
+        Widget:
+            size_hint: 1, 0.01
 
-                MDLabel:
-                    text_color: app.theme_cls.primary_color
-                    theme_text_color: "Custom"
-                    font_style: 'Subtitle2'
-                    halign: "center"
-                    markup: True
-                    text: "Only one hacker is among the following."
+        MDBoxLayout:
+            orientation: "vertical"
+            canvas.before:
+                Color:
+                    rgba: 0/255, 0/255, 0/255, 0.8
+                Line:
+                    width: 0.3
+                    rectangle: self.x, self.y, self.width, self.height
+                Color:
+                    rgba: 0/255, 0/255, 0/255, 0.5
+                Rectangle:
+                    pos: self.pos
+                    size: self.size
+
+            MDLabel:
+                id: log1sub
+                markup: True
+                text_color: app.theme_cls.primary_color
+                theme_text_color: "Custom"
+                font_style: 'Subtitle2'
+                halign: "center"
+                text: f"[size=30sp][font=Icons]{md_icons['folder']}[/font] [font=Icons]{md_icons['folder']}[/font][/size]"
+
+            MDLabel:
+                text_color: C("FFFFFF")
+                theme_text_color: "Custom"
+                font_style: 'Subtitle2'
+                halign: "center"
+                text: "Only one hacker is among the following."
 
         MDRectangleFlatButton:
             id: okbutton
