--- a/dialogs/rematchdialog.kv
+++ b/dialogs/rematchdialog.kv
@@ -1,10 +1,11 @@
 <RematchDialog>:
     auto_dismiss: False
-    size_hint: 0.9, 0.25
+    size_hint: 0.5, 0.2
 
     MDCard:
         orientation: "vertical"
         padding: "8dp"
+        spacing: "12dp"
         md_bg_color: app.theme_cls.primary_color
         border_radius: "20dp"
         radius: ["15dp"]
@@ -20,9 +21,6 @@
         MDSeparator:
             color: C("FFFFFF")
 
-        Widget:
-            size_hint: 1, 0.2
-
         MDLabel:
             text: "Play a rematch with the same settings or start fresh with a new game."
             text_color: C("FFFFFF")
@@ -30,13 +28,25 @@
             theme_text_color: "Custom"
             size_hint_y: None
             height: self.texture_size[1]
-            markup: True
 
         MDBoxLayout:
             orientation: "horizontal"
-            spacing: 15
+            spacing: "8dp"
 
             Widget:
+
+            MDRectangleFlatButton:
+                font_style: "Button"
+                theme_text_color: "Custom"
+                line_color: C("FFFFFF")
+                text_color: C("FFFFFF")
+                text: "New Game"
+                on_release:
+                    app.root.transition.direction = "down"
+                    app.root.current = "player"
+                    app.root.get_screen('endgame').refresh()
+                    root.newgame()
+                    root.dismiss()
 
             MDRectangleFlatButton:
                 font_style: "Button"
@@ -51,17 +61,4 @@
                     app.root.get_screen('reveal').rematchreset()
                     app.root.transition.direction = "down"
                     app.root.current = "reveal"
-                    root.dismiss()
-
-            MDRectangleFlatButton:
-                font_style: "Button"
-                theme_text_color: "Custom"
-                line_color: C("FFFFFF")
-                text_color: C("FFFFFF")
-                text: "New Game"
-                on_release:
-                    app.root.transition.direction = "down"
-                    app.root.current = "player"
-                    app.root.get_screen('endgame').refresh()
-                    root.newgame()
                     root.dismiss()
