--- a/gui/mainscreens/PlayerLog.kv
+++ b/gui/mainscreens/PlayerLog.kv
@@ -64,8 +64,8 @@
         MDFillRoundFlatIconButton:
             id: reveallog
             adaptive_height: True
-            icon: "folder-search"
-            text: "Reveal Log"
+            icon: "folder-open"
+            text: "Open Log"
             pos_hint: {"center_x": 0.5}
             md_bg_color: app.theme_cls.primary_color
             font_style: "Button"
