--- a/gui/endgame.kv
+++ b/gui/endgame.kv
@@ -95,6 +95,38 @@
                         pos: self.pos
                         size: self.size
 
+                MDLabel:
+                    id: action_0
+                    adaptive_height: True
+                    text_color: C('FFFFFF')
+                    theme_text_color: "Custom"
+                    font_style: 'H6'
+                    markup: True
+
+                MDLabel:
+                    id: action_1
+                    adaptive_height: True
+                    text_color: C('FFFFFF')
+                    theme_text_color: "Custom"
+                    font_style: 'H6'
+                    markup: True
+
+                MDLabel:
+                    id: action_2
+                    adaptive_height: True
+                    text_color: C('FFFFFF')
+                    theme_text_color: "Custom"
+                    font_style: 'H6'
+                    markup: True
+
+                MDLabel:
+                    id: action_3
+                    adaptive_height: True
+                    text_color: C('FFFFFF')
+                    theme_text_color: "Custom"
+                    font_style: 'H6'
+                    markup: True
+
         MDBottomAppBar:
             MDToolbar:
                 icon: "autorenew"
