--- a/gui/endgame.kv
+++ b/gui/endgame.kv
@@ -23,7 +23,7 @@
                 text_color: C("FFFFFF")
                 theme_text_color: "Custom"
                 font_style: "H4"
-                text: "Results"
+                text: "Summary"
                 halign: "center"
 
             MDSeparator:
@@ -100,7 +100,7 @@
                     adaptive_height: True
                     text_color: C('FFFFFF')
                     theme_text_color: "Custom"
-                    font_style: 'H6'
+                    font_style: 'Body1'
                     markup: True
 
                 MDLabel:
@@ -108,7 +108,7 @@
                     adaptive_height: True
                     text_color: C('FFFFFF')
                     theme_text_color: "Custom"
-                    font_style: 'H6'
+                    font_style: 'Body1'
                     markup: True
 
                 MDLabel:
@@ -116,7 +116,7 @@
                     adaptive_height: True
                     text_color: C('FFFFFF')
                     theme_text_color: "Custom"
-                    font_style: 'H6'
+                    font_style: 'Body1'
                     markup: True
 
                 MDLabel:
@@ -124,7 +124,7 @@
                     adaptive_height: True
                     text_color: C('FFFFFF')
                     theme_text_color: "Custom"
-                    font_style: 'H6'
+                    font_style: 'Body1'
                     markup: True
 
         MDBottomAppBar:
