--- a/gui/endgame.kv
+++ b/gui/endgame.kv
@@ -23,7 +23,7 @@
                 text_color: C("FFFFFF")
                 theme_text_color: "Custom"
                 font_style: "H4"
-                text: "Summary"
+                text: "Game Summary"
                 halign: "center"
 
             MDSeparator:
@@ -100,7 +100,7 @@
                     adaptive_height: True
                     text_color: C('FFFFFF')
                     theme_text_color: "Custom"
-                    font_style: 'Body1'
+                    font_style: 'H6'
                     markup: True
 
                 MDLabel:
@@ -108,7 +108,7 @@
                     adaptive_height: True
                     text_color: C('FFFFFF')
                     theme_text_color: "Custom"
-                    font_style: 'Body1'
+                    font_style: 'H6'
                     markup: True
 
                 MDLabel:
@@ -116,7 +116,7 @@
                     adaptive_height: True
                     text_color: C('FFFFFF')
                     theme_text_color: "Custom"
-                    font_style: 'Body1'
+                    font_style: 'H6'
                     markup: True
 
                 MDLabel:
@@ -124,8 +124,27 @@
                     adaptive_height: True
                     text_color: C('FFFFFF')
                     theme_text_color: "Custom"
-                    font_style: 'Body1'
+                    font_style: 'H6'
                     markup: True
+
+            MDSeparator:
+                color: C("FFFFFF")
+
+            AnchorLayout:
+                anchor_x: 'center'
+                anchor_y: 'top'
+                adaptive_height: True
+
+                MDFillRoundFlatButton:
+                    text: "View Point Scoring"
+                    theme_text_color: 'Custom'
+                    font_style: 'Button'
+                    text_color: C('#FFFFFF')
+                    on_release:
+                        app.globals.lastscreen = root.manager.current
+                        root.manager.transition.direction = "up"
+                        root.manager.current = "maininfo"
+                        app.root.get_screen('maininfo').ids.maininfoscreenmanager.current = "Points"
 
         MDBottomAppBar:
             MDToolbar:
