Logs now provide a text of what's on the log with icons, so no confusion.

--- a/codenet.kv
+++ b/codenet.kv
@@ -197,6 +197,17 @@ WindowManager:
                                 text: f"[size=30sp][font=Icons]{md_icons['file']}[/font] [font=Icons]{md_icons['file']}[/font] [font=Icons]{md_icons['file']}[/font] [font=Icons]{md_icons['file']}[/font][/size]"
 
                             MDLabel:
+                                adaptive_height: True
+                                id: round1subtext
+                                halign: 'center'
+                                text_color: app.theme_cls.primary_color
+                                adaptive_height: True
+                                theme_text_color: "Custom"
+                                font_style: 'Subtitle2'
+                                text: " "
+                                markup: True
+
+                            MDLabel:
                                 text_color: app.theme_cls.primary_color
                                 theme_text_color: "Custom"
                                 font_style: 'Subtitle2'
@@ -262,6 +273,17 @@ WindowManager:
                                 text: f"[size=30sp][font=Icons]{md_icons['file']}[/font] [font=Icons]{md_icons['file']}[/font] [font=Icons]{md_icons['file']}[/font][/size]"
 
                             MDLabel:
+                                adaptive_height: True
+                                id: round2sub1text
+                                halign: 'center'
+                                text: " "
+                                text_color: app.theme_cls.primary_color
+                                adaptive_height: True
+                                theme_text_color: "Custom"
+                                font_style: 'Subtitle2'
+                                markup: True
+
+                            MDLabel:
                                 id: round2sum1
                                 text_color: app.theme_cls.primary_color
                                 theme_text_color: "Custom"
@@ -316,6 +338,17 @@ WindowManager:
                                 text: f"[size=30sp][font=Icons]{md_icons['file']}[/font] [font=Icons]{md_icons['file']}[/font] [font=Icons]{md_icons['file']}[/font][/size]"
 
                             MDLabel:
+                                adaptive_height: True
+                                id: round2sub2text
+                                text: " "
+                                halign: 'center'
+                                text_color: app.theme_cls.primary_color
+                                adaptive_height: True
+                                theme_text_color: "Custom"
+                                font_style: 'Subtitle2'
+                                markup: True
+
+                            MDLabel:
                                 id: round2sum2
                                 text_color: app.theme_cls.primary_color
                                 theme_text_color: "Custom"
@@ -368,6 +401,17 @@ WindowManager:
                                 font_style: 'Subtitle2'
                                 halign: "center"
                                 text: f"[size=30sp][font=Icons]{md_icons['file']}[/font] [font=Icons]{md_icons['file']}[/font] [font=Icons]{md_icons['file']}[/font][/size]"
+
+                            MDLabel:
+                                adaptive_height: True
+                                id: round2sub3text
+                                halign: 'center'
+                                text: " "
+                                text_color: app.theme_cls.primary_color
+                                adaptive_height: True
+                                theme_text_color: "Custom"
+                                font_style: 'Subtitle2'
+                                markup: True
 
                             MDLabel:
                                 id: round2sum3
