--- a/dialogs/logdialog.kv
+++ b/dialogs/logdialog.kv
@@ -94,6 +94,17 @@
                 text: f"[size=30sp][font=Icons]{md_icons['folder']}[/font] [font=Icons]{md_icons['folder']}[/font][/size]"
 
             MDLabel:
+                adaptive_height: True
+                id: log1subtext
+                halign: 'center'
+                text: " "
+                text_color: C("FFFFFF")
+                adaptive_height: True
+                theme_text_color: "Custom"
+                font_style: 'Subtitle2'
+                markup: True
+
+            MDLabel:
                 text_color: C("FFFFFF")
                 theme_text_color: "Custom"
                 font_style: 'Subtitle2'
