Started using new and faster code. Added text to game summary.

--- a/gui/endgame.kv
+++ b/gui/endgame.kv
@@ -100,7 +100,7 @@
                     adaptive_height: True
                     text_color: C('FFFFFF')
                     theme_text_color: "Custom"
-                    font_style: 'H6'
+                    font_style: 'Body1'
                     markup: True
 
                 MDLabel:
@@ -108,7 +108,7 @@
                     adaptive_height: True
                     text_color: C('FFFFFF')
                     theme_text_color: "Custom"
-                    font_style: 'H6'
+                    font_style: 'Body1'
                     markup: True
 
                 MDLabel:
@@ -116,7 +116,7 @@
                     adaptive_height: True
                     text_color: C('FFFFFF')
                     theme_text_color: "Custom"
-                    font_style: 'H6'
+                    font_style: 'Body1'
                     markup: True
 
                 MDLabel:
@@ -124,7 +124,7 @@
                     adaptive_height: True
                     text_color: C('FFFFFF')
                     theme_text_color: "Custom"
-                    font_style: 'H6'
+                    font_style: 'Body1'
                     markup: True
 
             MDSeparator:
