--- a/dialogs/logdialog.kv
+++ b/dialogs/logdialog.kv
@@ -53,7 +53,7 @@
                 adaptive_height: True
                 theme_text_color: "Custom"
                 text_color: C("FFFFFF")
-                text: "[u]Confidential[/u]: Player logs may not be revealed until the end of the phase."
+                text: "[u]Confidential[/u]: You may not reveal your log until the end of the phase."
 
         MDLabel:
             text: "Result"
