--- a/gui/maininformation.kv
+++ b/gui/maininformation.kv
@@ -10,11 +10,7 @@
 <MainInfo>:
     name: "maininfo"
 
-    AnchorLayout:
-        Image:
-            size_hint: None, None
-            size: 1644, 3840
-            source: "images/defaultback.png"
+    Background:
 
     MDNavigationLayout:
         ScreenManager:
