--- a/gui/welcome.kv
+++ b/gui/welcome.kv
@@ -1,11 +1,7 @@
 <WelcomeWindow>:
     name: "welcome"
 
-    AnchorLayout:
-        Image:
-            size_hint: None, None
-            size: 1644, 3840
-            source: "images/defaultback.png"
+    Background:
 
     MDBoxLayout:
         orientation: "vertical"
