--- a/gui/colorselect.kv
+++ b/gui/colorselect.kv
@@ -1,11 +1,7 @@
 <ColorSelectScreen>:
     name: "colorselect"
 
-    AnchorLayout:
-        Image:
-            size_hint: None, None
-            size: 1644, 3840
-            source: "images/defaultback.png"
+    Background:
 
     MDBoxLayout:
         orientation: "vertical"
