--- a/gui/load.kv
+++ b/gui/load.kv
@@ -1,11 +1,7 @@
 <LoadingScreen>:
     name: "load"
 
-    AnchorLayout:
-        Image:
-            size_hint: None, None
-            size: 1644, 3840
-            source: "images/defaultback.png"
+    Background:
 
     MDBoxLayout:
         orientation: "vertical"
