Target has been added.

--- a/dialogs/identitydialog.kv
+++ b/dialogs/identitydialog.kv
@@ -64,6 +64,15 @@
                 markup: True
 
             MDLabel:
+                id: whattarget
+                text: "[u]Target[/u]: "
+                text_color: C("FFFFFF")
+                font_style: "Subtitle1"
+                theme_text_color: "Custom"
+                adaptive_height: True
+                markup: True
+
+            MDLabel:
                 id: identitydes
                 font_style: "Subtitle1"
                 theme_text_color: "Custom"
