Fixed image error.

--- a/gui/backgroundimage.kv
+++ b/gui/backgroundimage.kv
@@ -1,3 +1,5 @@
 <Background@AnchorLayout>:
-    FitImage:
+    Image:
         source: "images/defaultback.png"
+        allow_stretch: True
+        keep_ratio: False
