--- a/gui/endgame.kv
+++ b/gui/endgame.kv
@@ -53,7 +53,7 @@
                     text_color: C('FFFFFF')
                     theme_text_color: "Custom"
                     font_style: 'Body1'
-                    text: f" [color=#c62828][size=22sp][font=Icons]{md_icons['shield-bug']}[/font][/size][/color] Hackers: "
+                    text: f" [color={app.globals.colordefs['Red']}][size=22sp][font=Icons]{md_icons['shield-bug']}[/font][/size][/color] Hackers: "
                     markup: True
 
                 MDLabel:
@@ -63,7 +63,7 @@
                     text_color: C('FFFFFF')
                     theme_text_color: "Custom"
                     font_style: 'Body1'
-                    text: f" [color=#1565c0][size=22sp][font=Icons]{md_icons['shield-lock']}[/font][/size][/color] Coders: "
+                    text: f" [color={app.globals.colordefs['Blue']}][size=22sp][font=Icons]{md_icons['shield-lock']}[/font][/size][/color] Coders: "
                     markup: True
 
             MDSeparator:
