--- a/gui/playeramount.kv
+++ b/gui/playeramount.kv
@@ -49,6 +49,7 @@
                     font_style: 'Button'
                     md_bg_color: app.theme_cls.primary_color
                     text: "4 players"
+                    size_hint: 1, 1
                     rounded_button: False
                     on_press:
                         root.selectcheck(butt1)
@@ -60,6 +61,7 @@
                     font_style: 'Button'
                     md_bg_color: app.theme_cls.primary_color
                     text: "5 players"
+                    size_hint: 1, 1
                     rounded_button: False
                     on_press:
                         root.selectcheck(butt2)
@@ -71,6 +73,7 @@
                     font_style: 'Button'
                     md_bg_color: app.theme_cls.primary_color
                     text: "6 players"
+                    size_hint: 1, 1
                     rounded_button: False
                     on_press:
                         root.selectcheck(butt3)
@@ -82,6 +85,7 @@
                     font_style: 'Button'
                     md_bg_color: app.theme_cls.primary_color
                     text: "7 Players"
+                    size_hint: 1, 1
                     rounded_button: False
                     on_press:
                         root.selectcheck(butt4)
@@ -93,6 +97,7 @@
                     font_style: "Button"
                     md_bg_color: app.theme_cls.primary_color
                     text: "8 Players"
+                    size_hint: 1, 1
                     rounded_button: False
                     on_press:
                         root.selectcheck(butt5)
@@ -104,6 +109,7 @@
                     font_style: "Button"
                     md_bg_color: app.theme_cls.primary_color
                     text: "9 Players"
+                    size_hint: 1, 1
                     rounded_button: False
                     on_press:
                         root.selectcheck(butt6)
